--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,32 +1,65 @@
 body {
-  margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  color: aqua;
+  font-family: 'Cardo', serif;;
+  color: #484848;
+  text-align: left;
 }
 
+header {
+  background: linear-gradient(to left, #4568DC , #B06AB3);
+  width: 100%;
+  height: 150px;
+}
 
-.App {
+h2 {
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2em;
+  padding-top: 60px;
+  position: relative;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+h3 {
+  color: #4568DC;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.2em;
+  padding-bottom: 15px;
+  letter-spacing: 0.05em;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.question {
+  margin: 50px 0 0 85px;
+}
+
+label {
+  color: #6b6b6b;
+  letter-spacing: 0.01em;
+  margin: 25px;
+}
+
+input {
+  margin-right: 10px;
+}
+
+.answer-container {
+  padding-bottom: 10px;
+}
+
+.submit-button {
+  background: #B06AB3;
   color: white;
+  font-family: 'Montserrat', serif;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  font-size: 1em;
+  margin: 50px 0 50px 85px;
+  width: 100px;
+  height: 50px;
+  border-style: none;
+  cursor: pointer;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.submit-button:hover {
+  background: #4568DC;
 }
